<?xml version="1.0"?>
<package format="2">
  <name>vslam</name>
  <version>0.0.0</version>
  <description>The vslam package</description>

  <maintainer email="xubo@todo.todo">xubo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend package="tf"/>
  <depend package="sensor_msgs"/>
  <depend package="image_transport"/>
  <depend package="cv_bridge"/>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
